# ChangeLog for sci-biology/embassy
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/embassy/ChangeLog,v 1.34 2011/03/09 18:50:22 armin76 Exp $

  09 Mar 2011; Raúl Porcel <armin76@gentoo.org> embassy-4.0.0.ebuild,
  embassy-6.0.1.ebuild, embassy-6.1.0.ebuild:
  Drop sparc keywords

  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org> embassy-6.1.0.ebuild:
  Transfer Prefix keywords

  01 Sep 2009; Olivier Fisette <ribosome@gentoo.org> metadata.xml:
  Giving up maintainership of this package.

*embassy-6.1.0 (01 Sep 2009)

  01 Sep 2009; Olivier Fisette <ribosome@gentoo.org> +embassy-6.1.0.ebuild:
  New meta-package for EMBASSY packages building against EMBOSS 6.1.0.

  01 Sep 2009; Olivier Fisette <ribosome@gentoo.org> embassy-6.0.1.ebuild:
  Stabilised on amd64 and x86.

  27 Aug 2008; Olivier Fisette <ribosome@gentoo.org> -embassy-5.0.0.ebuild:
  Pruning version that will never be stabilised.

*embassy-6.0.1 (27 Aug 2008)

  27 Aug 2008; Olivier Fisette <ribosome@gentoo.org> +embassy-6.0.1.ebuild:
  New meta-package for EMBASSY packages building against EMBOSS 6.0.1.

*embassy-5.0.0 (18 Jul 2007)

  18 Jul 2007; Olivier Fisette <ribosome@gentoo.org> +embassy-5.0.0.ebuild:
  New meta-package for EMBASSY packages building against EMBOSS 5.0.0.

  17 Feb 2007; Olivier Fisette <ribosome@gentoo.org> embassy-4.0.0.ebuild:
  Added to ~amd64.

  10 Dec 2006; Olivier Fisette <ribosome@gentoo.org> -embassy-3.0.0.ebuild:
  Pruning old version.

  03 Nov 2006; nixnut <nixnut@gentoo.org> embassy-4.0.0.ebuild:
  Stable on ppc wrt bug 153766

  03 Nov 2006; Jeff Gardner <je_fro@gentoo.org> embassy-4.0.0.ebuild:
  Added ~sparc

  03 Nov 2006; Fabian Groffen <grobian@gentoo.org> embassy-3.0.0.ebuild,
  embassy-4.0.0.ebuild:
  Dropped ppc-macos, see you in prefix.

  02 Nov 2006; Olivier Fisette <ribosome@gentoo.org> embassy-4.0.0.ebuild:
  Added to x86.

*embassy-4.0.0 (21 Jul 2006)
