@@ -1,5 +1,14 @@
-EBUILD embassy-4.0.0.ebuild 1451 RMD160 9be975edb21ac0e0105d337d9894e1935dc6847d SHA1 9cf6957797eee7328084ec2b30111b72173c1293 SHA256 66bbff2072679f5f7aa8c687272e656e326b63cbe527c190a7fa9222da0e613c
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 EBUILD embassy-6.0.1.ebuild 1144 RMD160 df7525e800c0ed07d162c4ba4d5635184cc4a0eb SHA1 3ed32a3e69dfa9c5343b37b0e03ad766c96d4811 SHA256 e0cb11917f6852ebcff2a76781ae6a19f9d61dd3d7ebdb7e0bf4c8c25232f449
 EBUILD embassy-6.1.0.ebuild 1121 RMD160 75aca3b740307acd8519fc98cdec830fde3213c9 SHA1 50fc4b3656e7fff6739d3f20c7c019f22ff9f1fd SHA256 09e481e48cd9365291e757fa4892812eb4df475bf8864365dbcf3dac076c2f6c
-MISC ChangeLog 4604 RMD160 dd247496b20865d4b4d55231b304204fb9444c16 SHA1 beafbaca109c3e462c0e50edefeea0345252c4ed SHA256 9fe6223217e76903452c9e1f162d85886300ee99caa66b069e4fa1318183cb5e
+MISC ChangeLog 4711 RMD160 84d73243a12e540f2e6bc42461775aed51bb4a90 SHA1 358fb6e296492c3a5038d31ae3db88b59ca791b8 SHA256 fce05c4369d025515d669a518d9f8d06d2c14847511dc9ef36fab9a32fb4e04b
 MISC metadata.xml 165 RMD160 b247a16b6552b292d1249ff4e8ea5060ad2c4372 SHA1 a9f91a3a303f4c85430e21eca09913e1c9426366 SHA256 560c375768c8e164d954d61924f110da785b4771012cb830963eaa267a319132
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk2azaUACgkQgAnW8HDreRbXKQCfctPPcGBragV3+YqMlRU6TJAN
+X4sAnREEgD6rTbBsUzWVHIgjrJoPZcM3
+=gYis
+-----END PGP SIGNATURE-----
