@@ -1,6 +1,9 @@
 # ChangeLog for sci-biology/embassy
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/embassy/ChangeLog,v 1.34 2011/03/09 18:50:22 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/embassy/ChangeLog,v 1.35 2011/04/05 08:06:56 jlec Exp $
+
+  05 Apr 2011; Justin Lecher <jlec@gentoo.org> -embassy-4.0.0.ebuild:
+  Dropped old, due to unsatisfied deps
 
   09 Mar 2011; Raúl Porcel <armin76@gentoo.org> embassy-4.0.0.ebuild,
   embassy-6.0.1.ebuild, embassy-6.1.0.ebuild:
